--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main>
   <section class="info-box info-1">
     <h2>Bienvenidos a...</h2>
-    <img src="C:\Users\sanch\Downloads\efc619f2-dd56-4e2b-b8f3-7b92259e0e05.png" width="350"
+    <img src="logo.png" width="350"
       height="300">
 </main>
 
