--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sabores de mi Tierra - Imagen</title>
+  <title>Sabores de mi Tierra - Inicio</title>
   <link rel="stylesheet" href="inicio.css" />
 </head>
 <body>
